text overflow fixes

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -392,10 +392,10 @@ header#preheader-band
             color: white
             font-size: 40px
             text-align: center
-          p
-            color: rgb(50,50,50)
-            margin: 0 20px
-            text-align: center
+      p.video-description
+        color: rgb(50,50,50)
+        margin: 0 20px
+        text-align: center
       div.fuck_you_i_win
         display: block
         margin: 10px auto 0 auto
